--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <nb-layout>
+    <nb-layout-column>
+      <ion-router-outlet></ion-router-outlet>
+    </nb-layout-column>
+  </nb-layout>
 </ion-app>
