--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -40,3 +40,12 @@ ion-col {
   display: flex;
   justify-content: center;
 }
+
+ion-row {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.nbin {
+  width: 60%;
+  text-align: center;
+}
